# rust-chat-sender

./: Cargo.toml  Dockerfile.local  rest.org
config/: default.toml  dev.toml  docker.toml
src/: config.rs  main.rs
