[package]
name = "send"
version = "0.1.0"
description = "A service which accepts messages from the client, and publishes to Kafka."
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = { version = "0.5", features = [] }
futures = "0.3"
rdkafka = { version = "0.28", features = ["cmake-build"] }
clap = { version = "3.2", features = ["derive"] }
chrono = "0.4"
uuid = { version = "1.1", features = ["v4", "fast-rng", "serde"] }
message = { git = "https://github.com/rdeanmcdonald/rust-chat-message" }
config = "0.13.1"
strum = "0.24"
strum_macros = "0.24"
